Harmoniser les applications web et mobile
